@@ -1,6 +1,11 @@
 FBINTF Change Log  version          (1.3-3 Build 12889) Sun, 24 Oct 2021 13:49:28 +0100
 
-1. Fix compile error with fpc trunk. Type change to tzname.
+1. Fix compile error with fpc trunk (3.3.1 and later), due to type change to tzname in "unix" unit.
+
+2. Remove constraint in IAttachment.HasScollableCursors that returned false when
+   using remote protocol. Scrollable cursors with remote database expected to
+   be support for Firebird 4.0.1 onwards. Note: Firebird 4.0.0 will return
+   a not supported error.
 
 FBINTF Change Log  version          (1.3-2 Build 12889) Sun, 24 Oct 2021 13:49:28 +0100
 
